Fix image border z-index

--- a/app/rich/templates/css/970x250.scss
+++ b/app/rich/templates/css/970x250.scss
@@ -31,6 +31,7 @@ html, body {
 
         .backgrounds:after { 
             @include line('false', $lineHeight, $lineColor); 
+            z-index: 2 !important;
         }
     }
 }
