--- a/app/rich/templates/css/global.scss
+++ b/app/rich/templates/css/global.scss
@@ -74,6 +74,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
           opacity: 0;
           display: inline-block;
           width: auto;
+          z-index: 0;
         }
         
         .background.active {
